# pywui_rs

./: Cargo.toml  pyproject.toml
pywui_rs/: __init__.py  pywui_rs.pyi  webview.py  window.py
src/: config.rs  init_script.js  init_script.rs  lib.rs  util.rs  webview.rs  window.rs
tests/: pywui.conf.json  test_sum.py
tests/assets/: splashscreen.html  test.css  test.js
tests/icons/: pywui.icns
